Bug 46379 - test connect/test-nonblocking-tls.py is failing with master
Summary: test connect/test-nonblocking-tls.py is failing with master
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-21 01:44 UTC by Guillaume Desmottes
Modified: 2012-02-21 05:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
logs (19.16 KB, text/plain)
2012-02-21 04:59 UTC, Guillaume Desmottes
Details

Description Guillaume Desmottes 2012-02-21 01:44:55 UTC
This is with 3d6ba70935c402e1e2b39716ca6014c22aa1520e



$ make -C tests/twisted check-twisted TWISTED_TESTS=connect/test-nonblocking-tls.py
make : on entre dans le répertoire « /home/cassidy/dev/telepathy-gabble/tests/twisted »
rm -f tools/core
rm -f tools/vgcore.*
rm -f tools/gabble-testing.log
rm -f tools/strace.log
if test -n "$GABBLE_TEST_REFDBG"; then \
  sleep=6; \
        else \
  sleep=0; \
fi; \
failed=0; \
sh ./tools/with-session-bus.sh \
	--sleep=$sleep \
	--config-file=tools/servicedir-uninstalled/tmp-session-bus.conf \
	-- make check-TESTS \
	TESTS="connect/test-nonblocking-tls.py" \
	TESTS_ENVIRONMENT="PYTHONPATH=/home/cassidy/dev/telepathy-gabble/tests/twisted:/home/cassidy/dev/telepathy-gabble/tests/twisted GABBLE_TWISTED_SRCDIR=. /usr/bin/python -u" || \
	failed=1; \
if test -e tools/core; then\
	echo -e "\033[0;31;1mCore dump exists: tools/core\033[0m";\
	exit 1;\
fi; \
if test $failed = 1; then\
	exit 1;\
fi;
Temporary bus daemon is unix:abstract=/tmp/dbus-7MZNwb56jH,guid=7e6f00606105be59821eeef3000267a0
Temporary bus daemon PID is 5034
make[1] : on entre dans le répertoire « /home/cassidy/dev/telepathy-gabble/tests/twisted »
Waiting for event on: dbus
Adding to queue
got event:
- type dbus-signal
- args: [u':1.0']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameAcquired'
- subqueue: 'dbus'
- subtype: 'signal'
got event:
- type dbus-signal
- args: [u':1.0']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameAcquired'
- subqueue: 'dbus'
- subtype: 'signal'
not handled

Waiting for event on: dbus
Adding to queue
got event:
- type dbus-signal
- args: [1L, 1L]
- interface: 'org.freedesktop.Telepathy.Connection'
- path: '/org/freedesktop/Telepathy/Connection/gabble/jabber/test1_40localhost_2fResource'
- signal: 'StatusChanged'
- subqueue: 'dbus'
- subtype: 'signal'
got event:
- type dbus-signal
- args: [1L, 1L]
- interface: 'org.freedesktop.Telepathy.Connection'
- path: '/org/freedesktop/Telepathy/Connection/gabble/jabber/test1_40localhost_2fResource'
- signal: 'StatusChanged'
- subqueue: 'dbus'
- subtype: 'signal'
handled, took 8.867 ms

Waiting for event on: dbus
Adding to queue
got event:
- type dbus-signal
- args: [1L, 1L]
- interface: 'org.freedesktop.Telepathy.Connection'
- path: '/org/freedesktop/Telepathy/Connection/gabble/jabber/test2_40localhost_2fResource'
- signal: 'StatusChanged'
- subqueue: 'dbus'
- subtype: 'signal'
got event:
- type dbus-signal
- args: [1L, 1L]
- interface: 'org.freedesktop.Telepathy.Connection'
- path: '/org/freedesktop/Telepathy/Connection/gabble/jabber/test2_40localhost_2fResource'
- signal: 'StatusChanged'
- subqueue: 'dbus'
- subtype: 'signal'
handled, took 1.575 ms

Waiting for event on: stream
Adding to queue
got event:
- type dbus-signal
- args: [u'org.freedesktop.Telepathy.Connection.gabble.jabber.test2_40localhost_2fResource',
 u':1.1',
 u'']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameOwnerChanged'
- subqueue: 'dbus'
- subtype: 'signal'
Adding to queue
got event:
- type dbus-signal
- args: [u'org.freedesktop.Telepathy.Connection.gabble.jabber.test1_40localhost_2fResource',
 u':1.1',
 u'']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameOwnerChanged'
- subqueue: 'dbus'
- subtype: 'signal'
Adding to queue
got event:
- type dbus-signal
- args: [u'org.freedesktop.Telepathy.ConnectionManager.gabble', u':1.1', u'']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameOwnerChanged'
- subqueue: 'dbus'
- subtype: 'signal'
Adding to queue
got event:
- type dbus-signal
- args: [u':1.1', u':1.1', u'']
- interface: 'org.freedesktop.DBus'
- path: '/org/freedesktop/DBus'
- signal: 'NameOwnerChanged'
- subqueue: 'dbus'
- subtype: 'signal'
Traceback (most recent call last):
  File "./connect/test-nonblocking-tls.py", line 141, in <module>
    test(queue, bus, conn1, conn2, stream1, stream2)
  File "./connect/test-nonblocking-tls.py", line 77, in test
    q.expect('stream-authenticated')
  File "/home/cassidy/dev/telepathy-gabble/tests/twisted/servicetest.py", line 173, in expect
    event = self.wait([pattern.subqueue])
  File "/home/cassidy/dev/telepathy-gabble/tests/twisted/servicetest.py", line 307, in wait
    raise TimeoutError
servicetest.TimeoutError
FAIL: connect/test-nonblocking-tls.py
Comment 1 Simon McVittie 2012-02-21 04:40:48 UTC
worksforme on Debian (GNUTLS 2.12.16-1).

Interpreting your log: StatusChanged to CONNECTING because REQUESTED, then Gabble crashes. ${builddir}/tests/twisted/tools/gabble-testing.log and/or backtrace from the core dump, please?
Comment 2 Guillaume Desmottes 2012-02-21 04:58:34 UTC
#0  0x00007fa85d16ee18 in g_logv (log_domain=0x7fa85d1ebd25 "GLib", log_level=G_LOG_LEVEL_WARNING, format=0x7fa85d1f13fc "%s", 
    args1=0x7fffb5e2d9c8) at gmessages.c:758
        domain = 0x0
        data = 0x0
        depth = 1
        log_func = 0x43e461 <log_handler>
        domain_fatal_mask = 5
        masquerade_fatal = 0
        test_level = 18
        was_fatal = 0
        was_recursion = 0
        i = 4
#1  0x00007fa85d16ef0c in g_log (log_domain=0x7fa85d1ebd25 "GLib", log_level=G_LOG_LEVEL_WARNING, format=0x7fa85d1f13fc "%s")
    at gmessages.c:792
        args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7fffb5e2daa0, reg_save_area = 0x7fffb5e2d9e0}}
#2  0x00007fa85d16f0b3 in g_warn_message (domain=0x7fa85d1ebd25 "GLib", file=0x7fa85d1ebd1c "gerror.c", line=390, 
    func=0x7fa85d1ebeb0 "g_error_new_valist", warnexpr=0x7fa85d1ebd10 "domain != 0") at gmessages.c:825
        s = 0x1c98c50 "(gerror.c:390):g_error_new_valist: runtime check failed: (domain != 0)"
        lstr = "390\000\000\000\000\000\034\275\036]\250\177\000\000%\275\036]\250\177\000\000\020\275\036]\250\177\000"
#3  0x00007fa85d14ed4a in g_error_new_valist (domain=0, code=0, format=0x54f38e "%d: %s", args=0x7fffb5e2dba0) at gerror.c:390
        error = 0x7fa85d459000
        __PRETTY_FUNCTION__ = "g_error_new_valist"
#4  0x00007fa85d14f186 in g_set_error (err=0x7fffb5e2dcc0, domain=0, code=0, format=0x54f38e "%d: %s") at gerror.c:560
        new = 0x0
        args = {{gp_offset = 32, fp_offset = 48, overflow_arg_area = 0x7fffb5e2dc80, reg_save_area = 0x7fffb5e2dbc0}}
#5  0x00000000004b246c in wocky_tls_set_error (error=0x7fffb5e2dcc0, result=-9) at wocky-tls.c:313
        code = -9
#6  0x00000000004b250e in wocky_tls_job_make_result (job=0x1c511d8, result=-9) at wocky-tls.c:341
        simple = 0x1cb1c60
        error = 0x0
        __PRETTY_FUNCTION__ = "wocky_tls_job_make_result"
#7  0x00000000004b2643 in wocky_tls_job_result_boolean (job=0x1c511d8, result=-9) at wocky-tls.c:387
        simple = 0x1c512c0
#8  0x00000000004b27e7 in wocky_tls_session_try_operation (session=0x1c51180, operation=WOCKY_TLS_OP_READ) at wocky-tls.c:421
        result = -9
        __PRETTY_FUNCTION__ = "wocky_tls_session_try_operation"
#9  0x00000000004b439a in wocky_tls_session_read_ready (object=0x1c692b0, result=0x1ca7460, user_data=0x1c51180) at wocky-tls.c:1179
        session = 0x1c51180
        __PRETTY_FUNCTION__ = "wocky_tls_session_read_ready"
---Type <return> to continue, or q <return> to quit---
#10 0x00007fa85db22323 in async_ready_callback_wrapper (source_object=0x1c692b0, res=0x1ca7460, user_data=0x1c51180)
    at ginputstream.c:470
        stream = 0x1c692b0
#11 0x00007fa85db3b93e in g_simple_async_result_complete (simple=0x1ca7460) at gsimpleasyncresult.c:744
        current_source = 0x1f1b000
        current_context = 0x1c3ad70
        __PRETTY_FUNCTION__ = "g_simple_async_result_complete"
#12 0x00007fa85db47ca7 in g_socket_input_stream_read_ready (socket=0x1cb0d40, condition=G_IO_IN, stream=0x1c692b0)
    at gsocketinputstream.c:166
        simple = 0x1ca7460
        error = 0x0
        result = 0
#13 0x00007fa85db40f83 in socket_source_dispatch (source=0x1f1b000, callback=0x7fa85db47b93 <g_socket_input_stream_read_ready>, 
    user_data=0x1c692b0) at gsocket.c:3142
        func = 0x7fa85db47b93 <g_socket_input_stream_read_ready>
        socket_source = 0x1f1b000
        socket = 0x1cb0d40
        ret = 0
#14 0x00007fa85d1652d3 in g_main_dispatch (context=0x1c3ad70) at gmain.c:2510
        dispatch = 0x7fa85db40ef9 <socket_source_dispatch>
        was_in_call = 0
        user_data = 0x1c692b0
        callback = 0x7fa85db47b93 <g_socket_input_stream_read_ready>
        cb_funcs = 0x7fa85d457b40
        cb_data = 0x1c7ddb0
        need_destroy = 29594160
        current_source_link = {data = 0x1f1b000, next = 0x0}
        source = 0x1f1b000
        current = 0x1c47630
        i = 0
        __PRETTY_FUNCTION__ = "g_main_dispatch"
#15 0x00007fa85d165f94 in g_main_context_dispatch (context=0x1c3ad70) at gmain.c:3047
No locals.
#16 0x00007fa85d166177 in g_main_context_iterate (context=0x1c3ad70, block=1, dispatch=1, self=0x1c33730) at gmain.c:3118
        max_priority = 2147483647
        timeout = -1
        some_ready = 1
        nfds = 6
        allocated_nfds = 6
---Type <return> to continue, or q <return> to quit---
        fds = 0x1c8b140
#17 0x00007fa85d1665a0 in g_main_loop_run (loop=0x1c3fe00) at gmain.c:3312
        self = 0x1c33730
        __PRETTY_FUNCTION__ = "g_main_loop_run"
#18 0x00007fa85df9ebff in tp_run_connection_manager (prog_name=<optimized out>, version=<optimized out>, construct_cm=<optimized out>, 
    argc=<optimized out>, argv=<optimized out>) at run.c:285
        connection = 0x1c37f00
        bus_daemon = 0x1c3c890
        error = 0x0
        ret = 1
        __PRETTY_FUNCTION__ = "tp_run_connection_manager"
#19 0x000000000043e6de in gabble_main (argc=1, argv=0x7fffb5e2e1a8) at gabble.c:182
        loader = 0x1c33860
        out = 0
        fatal_mask = 29
#20 0x0000000000431e1f in main (argc=1, argv=0x7fffb5e2e1a8) at main-debug.c:70
        ret = 1
        kludged = 0x1c34800
Comment 3 Guillaume Desmottes 2012-02-21 04:59:36 UTC
Created attachment 57389 [details]
logs
Comment 4 Simon McVittie 2012-02-21 05:50:31 UTC
It was a Wocky bug. Fixed in git for 0.15.4


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.