wocky/wocky-openssl.c
@@ -233,28 +233,6 @@ G_DEFINE_TYPE (WockyTLSOutputStream, wocky_tls_output_stream, G_TYPE_OUTPUT_STRE
                                        WOCKY_TYPE_TLS_OUTPUT_STREAM,         \
                                        WockyTLSOutputStream))
 
-GQuark
-wocky_tls_cert_error_quark (void)
-{
-  static GQuark quark = 0;
-
-  if (quark == 0)
-    quark = g_quark_from_static_string ("wocky-tls-cert-error");
-
-  return quark;
-}
-
-GQuark
-wocky_tls_error_quark (void)
-{
-  static GQuark quark = 0;
-
-  if (quark == 0)
-    quark = g_quark_from_static_string ("wocky-tls-error");
-
-  return quark;
-}
-
 /* Ok: This function tries to retrieve the error that caused a problem from  *
  * bottom of the openssl error stack: The errnum argument is the error code  *
  * returned by the last openssl operation which MAY NOT have come from the   *
